# level3_cv_finalproject-cv-08

./: .gitignore  EDA.ipynb  Midi_synth.py  README.md  Roll2Midi_dataset.py  Roll2Midi_evaluate.py  Roll2Midi_inference.py  Roll2Midi_train.py  Roll2Wav.py  Video2Roll_evaluate.py  Video2Roll_inference.py  Video2Roll_train.py  config.yaml  crop_preprocess.py  experiment.ipynb  frontend.py  game.py  generate_score.py  inference.py  inference_all.sh  inference_dashboard.py  midi_file.py  preprocess.py  process.py  pyproject.toml  streamlit_run.py  test.py  visualization.ipynb
.github/workflows/: CD.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  issue_slack.yml  pr_slack.yml  streamlit_CD.yml  test.yml
app/: Makefile  frontend.py  main.py  model.py  roll_to_wav.py
dataset/: Video2Roll_dataset.py  __init__.py  augmentation.py  balance_data.py
foley-music/: README.md  config.yaml  test_AtinPiano_MUSIC.py  train.py  utils.py
foley-music/core/: engine.py
foley-music/core/dataloaders/: __init__.py  (+1 more)
foley-music/models/: __init__.py
model/: Video2RollNet.py  Video2RollNet_swin.py  __init__.py  swin_backbone.py
models/: make_wav.py  video_to_roll.py
notebooks/: rousseau_convert.ipynb
server_training/: Midi_synth.py  README.md  Roll2MidiNet.py  Roll2Midi_train.py  Video2Roll_inference.py  Video2Roll_train.py  config.yaml
server_training/dataset/: __init__.py  augmentation.py
server_training/model/: Video2RollNet.py  Video2RollNet_swin.py  __init__.py  swin_backbone.py
server_training/notebooks/: experiment.ipynb  get_videos.ipynb
server_training/tools/: audeo_makelabels.py  video2images.py
server_training/trainer/: __init__.py
server_training/utils/: util.py
tools/: audeo_makelabels.py  audio2flac.py  join_traindata.py  video2images.py  yt_download.py
trainer/: Video2Roll_trainer.py  __init__.py
utils/: util.py
